--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,12 @@
 		"@typescript-eslint/no-empty-interface":["off"],
 		"@typescript-eslint/no-unused-vars": ["off"],
 		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript-eslint/explicit-function-return-type": ["warn"],
+		"@typescript-eslint/explicit-function-return-type": ["off"],
 		"tabSize": 0,
 		"curly": "off",
-		"no-console": 1, 
+		"no-console": 0, 
 		"no-debugger": "warn",
-		"no-return-await": "warn",
+		"no-return-await": "off",
 		"triple-equals": 0,
 		"prefer-const": "warn",
 		"no-trailing-whitespace": 0,
