--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "noFallthroughCasesInSwitch": false,
     "strict": true,
     "strictPropertyInitialization": false,
+    "esModuleInterop": true
   }
 }
